--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El titulo del post</title>
-    <link rel="stysheet" href="css/estilos.css"/>
+    <link rel="stysheet" href="css/stilos.css"/>
 </head>
 <body>
     <h1>Aqui vamos a hacer un blog post</h1>
